courses/430_programming-languages/assignment-6/tests/error/hw5_error19.nex
print "should not get here:n";
1 / 0;
anon (a:int, a:int) : none { }(1,1);
